LanguageTool Change Log

2.8-SNAPSHOT (release planned for 2014-12-30)

-Asturian:
    -removed dependency on Hunspell, now uses Morfologik for spell checking

-German:
    -added a few rules

-Spanish:
    -removed dependency on Hunspell, now uses Morfologik for spell checking

-Tagalog:
    -removed dependency on Hunspell, now uses Morfologik for spell checking
    -the dash character ("-") is a delimiter now when tokenizing the text

-Russian:
    -added/improved several rules


-Rule Syntax:
    -<short>...</short> can now be added to a rulegroup to affect all the rules
     of that group

-API:
    -removed classes and methods that had been deprecated since 2.7 or longer

-Embedded server:
    -the config file options 'requestLimit' and 'requestLimitPeriodInSeconds' can
     now also be used for the HTTP server (not just for the HTTPS server)
    -new config file option 'trustXForwardForHeader': set this to 'true' if you
     run the server behind a reverse proxy and want the request limit to
     work on the original IP addresses provided by the 'X-forwarded-for' HTTP header,
     usually set by the proxy. If you run behind a proxy but don't set this
     property to true, one user can use all the requests so other users will
     also get an error message because of the request limit.


2.7 (2014-09-29)

-Breton:
    -added and improved rules
    -New rule that checks if a weekday matches a date, e.g. detects
     "Gwener 28 a viz Eost 2014", as that date isn't a Friday.
     
-Catalan:
    -added and improved rules
    -fixed false alarms
    -updated dictionary

-Dutch:
    -added and improved many rules
    -switched to Morfologik-based spell checker

-English:
    -Do you want to be part of the team that develops the world's most powerful
     Open Source proofreading tool? We're looking for a maintainer for the English
     rules in LanguageTool. See http://wiki.languagetool.org/tasks-for-language-maintainers
     for details.