@@ -10,6 +10,8 @@ LanguageTool Change Log
 
 -Spanish:
     -removed dependency on Hunspell, now uses Morfologik for spell checking
+    -Reformatted rules file
+    -Added more rules
 
 -Tagalog:
     -removed dependency on Hunspell, now uses Morfologik for spell checking
